comentarios en español parte2

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Sección hero -->
     <section class="hero-home">
         <div class="hero-overlay"></div>
         <div class="hero-content-wrapper">
@@ -86,7 +86,7 @@
         </div>
     </section>
 
-    <!-- Featured Packs Carousel -->
+    <!-- Carrousel de packs destacado -->
     <section id="featured-packs" class="featured-packs">
         <div class="section-container">
             <div class="section-header">
@@ -130,7 +130,7 @@
 
 
 
-    <!-- Main Content -->
+    <!-- Contenido principal -->
     <main class="home-main">
         <div class="main-container">
 
@@ -295,7 +295,7 @@
                 </form>
             </div>
 
-            <!-- Top Destinations -->
+            <!-- Top destinos -->
             <div class="sidebar-widget">
                 <h3><i class="fas fa-fire"></i> <span data-i18n="index_sidebar_top_destinations">Top Destinos</span></h3>
                 <ul class="widget-list">
@@ -320,7 +320,7 @@
                 </ul>
             </div>
 
-            <!-- Quick Tips -->
+            <!-- Consejos rápidos -->
             <div class="sidebar-widget">
                 <h3><i class="fas fa-lightbulb"></i> <span data-i18n="index_sidebar_quick_tips">Consejos Rápidos</span></h3>
                 <ul class="widget-list">
@@ -345,7 +345,7 @@
                 </ul>
             </div>
 
-            <!-- Upcoming Events -->
+            <!-- Próximos eventos -->
             <div class="sidebar-widget">
                 <h3><i class="fas fa-calendar-alt"></i> <span data-i18n="index_sidebar_upcoming_events">Próximos Encuentros</span></h3>
                 <ul class="widget-list events-list">
