packs del footer lleva a packs

--- a/versionb.html
+++ b/versionb.html
@@ -398,7 +398,7 @@
                 <ul>
                     <li><a href="index.html" data-i18n="nav_home">Inicio</a></li>
                     <li><a href="buscar-rutas.html" data-i18n="nav_routes">Buscar Rutas</a></li>
-                    <li><a href="versionb.html" data-i18n="nav_packs">Packs</a></li>
+                    <li><a href=#featured-packs data-i18n="nav_packs">Packs</a></li>
                     <li><a href="blog.html" data-i18n="nav_blog">Blog</a></li>
                 </ul>
             </div>
